APIs/googleapis.com/androidpublisher/v2/python-client/README.md
# openapi-client
Accesses Android application developers' Google Play accounts.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://www.googleapis.com/androidpublisher/v2/applications
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://www.googleapis.com/androidpublisher/v2/applications"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.EditsApi(api_client)
    package_name = 'package_name_example' # str | Unique identifier for the Android app that is being updated; for example, \"com.spiffygame\".
    edit_id = 'edit_id_example' # str | Unique identifier for this edit.
    apk_version_code = 56 # int | The APK version code whose APK-specific listings should be read or modified.
    language = 'language_example' # str | The language code (a BCP-47 language tag) of the APK-specific localized listing to read or modify. For example, to select Austrian German, pass \"de-AT\".
    alt = json # str | Data format for the response. (optional) (default to json)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional) (default to True)
    quota_user = 'quota_user_example' # str | An opaque string that represents a user for quota purposes. Must not exceed 40 characters. (optional)
    user_ip = 'user_ip_example' # str | Deprecated. Please use quotaUser instead. (optional)

    try:
        api_instance.androidpublisher_edits_apklistings_delete(package_name, edit_id, apk_version_code, language, alt=alt, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, user_ip=user_ip)
    except ApiException as e:
        print("Exception when calling EditsApi->androidpublisher_edits_apklistings_delete: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://www.googleapis.com/androidpublisher/v2/applications*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*EditsApi* | [**androidpublisher_edits_apklistings_delete**](docs/EditsApi.md#androidpublisher_edits_apklistings_delete) | **DELETE** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings/{language} | 
*EditsApi* | [**androidpublisher_edits_apklistings_deleteall**](docs/EditsApi.md#androidpublisher_edits_apklistings_deleteall) | **DELETE** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings | 
*EditsApi* | [**androidpublisher_edits_apklistings_get**](docs/EditsApi.md#androidpublisher_edits_apklistings_get) | **GET** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings/{language} | 
*EditsApi* | [**androidpublisher_edits_apklistings_list**](docs/EditsApi.md#androidpublisher_edits_apklistings_list) | **GET** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings | 
*EditsApi* | [**androidpublisher_edits_apklistings_patch**](docs/EditsApi.md#androidpublisher_edits_apklistings_patch) | **PATCH** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings/{language} | 
*EditsApi* | [**androidpublisher_edits_apklistings_update**](docs/EditsApi.md#androidpublisher_edits_apklistings_update) | **PUT** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings/{language} | 
*EditsApi* | [**androidpublisher_edits_apks_addexternallyhosted**](docs/EditsApi.md#androidpublisher_edits_apks_addexternallyhosted) | **POST** /{packageName}/edits/{editId}/apks/externallyHosted | 
*EditsApi* | [**androidpublisher_edits_apks_list**](docs/EditsApi.md#androidpublisher_edits_apks_list) | **GET** /{packageName}/edits/{editId}/apks | 
*EditsApi* | [**androidpublisher_edits_apks_upload**](docs/EditsApi.md#androidpublisher_edits_apks_upload) | **POST** /{packageName}/edits/{editId}/apks | 
*EditsApi* | [**androidpublisher_edits_bundles_list**](docs/EditsApi.md#androidpublisher_edits_bundles_list) | **GET** /{packageName}/edits/{editId}/bundles | 
*EditsApi* | [**androidpublisher_edits_bundles_upload**](docs/EditsApi.md#androidpublisher_edits_bundles_upload) | **POST** /{packageName}/edits/{editId}/bundles | 
*EditsApi* | [**androidpublisher_edits_commit**](docs/EditsApi.md#androidpublisher_edits_commit) | **POST** /{packageName}/edits/{editId}:commit | 
*EditsApi* | [**androidpublisher_edits_delete**](docs/EditsApi.md#androidpublisher_edits_delete) | **DELETE** /{packageName}/edits/{editId} | 
*EditsApi* | [**androidpublisher_edits_deobfuscationfiles_upload**](docs/EditsApi.md#androidpublisher_edits_deobfuscationfiles_upload) | **POST** /{packageName}/edits/{editId}/apks/{apkVersionCode}/deobfuscationFiles/{deobfuscationFileType} | 
*EditsApi* | [**androidpublisher_edits_details_get**](docs/EditsApi.md#androidpublisher_edits_details_get) | **GET** /{packageName}/edits/{editId}/details | 
*EditsApi* | [**androidpublisher_edits_details_patch**](docs/EditsApi.md#androidpublisher_edits_details_patch) | **PATCH** /{packageName}/edits/{editId}/details | 
*EditsApi* | [**androidpublisher_edits_details_update**](docs/EditsApi.md#androidpublisher_edits_details_update) | **PUT** /{packageName}/edits/{editId}/details | 
*EditsApi* | [**androidpublisher_edits_expansionfiles_get**](docs/EditsApi.md#androidpublisher_edits_expansionfiles_get) | **GET** /{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisher_edits_expansionfiles_patch**](docs/EditsApi.md#androidpublisher_edits_expansionfiles_patch) | **PATCH** /{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisher_edits_expansionfiles_update**](docs/EditsApi.md#androidpublisher_edits_expansionfiles_update) | **PUT** /{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisher_edits_expansionfiles_upload**](docs/EditsApi.md#androidpublisher_edits_expansionfiles_upload) | **POST** /{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisher_edits_get**](docs/EditsApi.md#androidpublisher_edits_get) | **GET** /{packageName}/edits/{editId} | 
*EditsApi* | [**androidpublisher_edits_images_delete**](docs/EditsApi.md#androidpublisher_edits_images_delete) | **DELETE** /{packageName}/edits/{editId}/listings/{language}/{imageType}/{imageId} | 
*EditsApi* | [**androidpublisher_edits_images_deleteall**](docs/EditsApi.md#androidpublisher_edits_images_deleteall) | **DELETE** /{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*EditsApi* | [**androidpublisher_edits_images_list**](docs/EditsApi.md#androidpublisher_edits_images_list) | **GET** /{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*EditsApi* | [**androidpublisher_edits_images_upload**](docs/EditsApi.md#androidpublisher_edits_images_upload) | **POST** /{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*EditsApi* | [**androidpublisher_edits_insert**](docs/EditsApi.md#androidpublisher_edits_insert) | **POST** /{packageName}/edits | 
*EditsApi* | [**androidpublisher_edits_listings_delete**](docs/EditsApi.md#androidpublisher_edits_listings_delete) | **DELETE** /{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisher_edits_listings_deleteall**](docs/EditsApi.md#androidpublisher_edits_listings_deleteall) | **DELETE** /{packageName}/edits/{editId}/listings | 
*EditsApi* | [**androidpublisher_edits_listings_get**](docs/EditsApi.md#androidpublisher_edits_listings_get) | **GET** /{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisher_edits_listings_list**](docs/EditsApi.md#androidpublisher_edits_listings_list) | **GET** /{packageName}/edits/{editId}/listings | 
*EditsApi* | [**androidpublisher_edits_listings_patch**](docs/EditsApi.md#androidpublisher_edits_listings_patch) | **PATCH** /{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisher_edits_listings_update**](docs/EditsApi.md#androidpublisher_edits_listings_update) | **PUT** /{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisher_edits_testers_get**](docs/EditsApi.md#androidpublisher_edits_testers_get) | **GET** /{packageName}/edits/{editId}/testers/{track} | 
*EditsApi* | [**androidpublisher_edits_testers_patch**](docs/EditsApi.md#androidpublisher_edits_testers_patch) | **PATCH** /{packageName}/edits/{editId}/testers/{track} | 
*EditsApi* | [**androidpublisher_edits_testers_update**](docs/EditsApi.md#androidpublisher_edits_testers_update) | **PUT** /{packageName}/edits/{editId}/testers/{track} | 
*EditsApi* | [**androidpublisher_edits_tracks_get**](docs/EditsApi.md#androidpublisher_edits_tracks_get) | **GET** /{packageName}/edits/{editId}/tracks/{track} | 
*EditsApi* | [**androidpublisher_edits_tracks_list**](docs/EditsApi.md#androidpublisher_edits_tracks_list) | **GET** /{packageName}/edits/{editId}/tracks | 
*EditsApi* | [**androidpublisher_edits_tracks_patch**](docs/EditsApi.md#androidpublisher_edits_tracks_patch) | **PATCH** /{packageName}/edits/{editId}/tracks/{track} | 
*EditsApi* | [**androidpublisher_edits_tracks_update**](docs/EditsApi.md#androidpublisher_edits_tracks_update) | **PUT** /{packageName}/edits/{editId}/tracks/{track} | 
*EditsApi* | [**androidpublisher_edits_validate**](docs/EditsApi.md#androidpublisher_edits_validate) | **POST** /{packageName}/edits/{editId}:validate | 
*InappproductsApi* | [**androidpublisher_inappproducts_delete**](docs/InappproductsApi.md#androidpublisher_inappproducts_delete) | **DELETE** /{packageName}/inappproducts/{sku} | 
*InappproductsApi* | [**androidpublisher_inappproducts_get**](docs/InappproductsApi.md#androidpublisher_inappproducts_get) | **GET** /{packageName}/inappproducts/{sku} | 
*InappproductsApi* | [**androidpublisher_inappproducts_insert**](docs/InappproductsApi.md#androidpublisher_inappproducts_insert) | **POST** /{packageName}/inappproducts | 
*InappproductsApi* | [**androidpublisher_inappproducts_list**](docs/InappproductsApi.md#androidpublisher_inappproducts_list) | **GET** /{packageName}/inappproducts | 
*InappproductsApi* | [**androidpublisher_inappproducts_patch**](docs/InappproductsApi.md#androidpublisher_inappproducts_patch) | **PATCH** /{packageName}/inappproducts/{sku} | 
*InappproductsApi* | [**androidpublisher_inappproducts_update**](docs/InappproductsApi.md#androidpublisher_inappproducts_update) | **PUT** /{packageName}/inappproducts/{sku} | 
*OrdersApi* | [**androidpublisher_orders_refund**](docs/OrdersApi.md#androidpublisher_orders_refund) | **POST** /{packageName}/orders/{orderId}:refund | 
*PurchasesApi* | [**androidpublisher_purchases_products_get**](docs/PurchasesApi.md#androidpublisher_purchases_products_get) | **GET** /{packageName}/purchases/products/{productId}/tokens/{token} | 
*PurchasesApi* | [**androidpublisher_purchases_subscriptions_cancel**](docs/PurchasesApi.md#androidpublisher_purchases_subscriptions_cancel) | **POST** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:cancel | 
*PurchasesApi* | [**androidpublisher_purchases_subscriptions_defer**](docs/PurchasesApi.md#androidpublisher_purchases_subscriptions_defer) | **POST** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:defer | 
*PurchasesApi* | [**androidpublisher_purchases_subscriptions_get**](docs/PurchasesApi.md#androidpublisher_purchases_subscriptions_get) | **GET** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token} | 
*PurchasesApi* | [**androidpublisher_purchases_subscriptions_refund**](docs/PurchasesApi.md#androidpublisher_purchases_subscriptions_refund) | **POST** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:refund | 
*PurchasesApi* | [**androidpublisher_purchases_subscriptions_revoke**](docs/PurchasesApi.md#androidpublisher_purchases_subscriptions_revoke) | **POST** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:revoke | 
*PurchasesApi* | [**androidpublisher_purchases_voidedpurchases_list**](docs/PurchasesApi.md#androidpublisher_purchases_voidedpurchases_list) | **GET** /{packageName}/purchases/voidedpurchases | 
*ReviewsApi* | [**androidpublisher_reviews_get**](docs/ReviewsApi.md#androidpublisher_reviews_get) | **GET** /{packageName}/reviews/{reviewId} | 
*ReviewsApi* | [**androidpublisher_reviews_list**](docs/ReviewsApi.md#androidpublisher_reviews_list) | **GET** /{packageName}/reviews | 
*ReviewsApi* | [**androidpublisher_reviews_reply**](docs/ReviewsApi.md#androidpublisher_reviews_reply) | **POST** /{packageName}/reviews/{reviewId}:reply | 


## Documentation For Models

 - [Apk](docs/Apk.md)
 - [ApkBinary](docs/ApkBinary.md)
 - [ApkListing](docs/ApkListing.md)
 - [ApkListingsListResponse](docs/ApkListingsListResponse.md)
 - [ApksAddExternallyHostedRequest](docs/ApksAddExternallyHostedRequest.md)
 - [ApksAddExternallyHostedResponse](docs/ApksAddExternallyHostedResponse.md)
 - [ApksListResponse](docs/ApksListResponse.md)
 - [AppDetails](docs/AppDetails.md)
 - [AppEdit](docs/AppEdit.md)
 - [Bundle](docs/Bundle.md)
 - [BundlesListResponse](docs/BundlesListResponse.md)
 - [Comment](docs/Comment.md)
 - [DeobfuscationFile](docs/DeobfuscationFile.md)
 - [DeobfuscationFilesUploadResponse](docs/DeobfuscationFilesUploadResponse.md)
 - [DeveloperComment](docs/DeveloperComment.md)
 - [DeviceMetadata](docs/DeviceMetadata.md)
 - [ExpansionFile](docs/ExpansionFile.md)
 - [ExpansionFilesUploadResponse](docs/ExpansionFilesUploadResponse.md)
 - [ExternallyHostedApk](docs/ExternallyHostedApk.md)
 - [ExternallyHostedApkUsesPermission](docs/ExternallyHostedApkUsesPermission.md)
 - [Image](docs/Image.md)
 - [ImagesDeleteAllResponse](docs/ImagesDeleteAllResponse.md)
 - [ImagesListResponse](docs/ImagesListResponse.md)
 - [ImagesUploadResponse](docs/ImagesUploadResponse.md)
 - [InAppProduct](docs/InAppProduct.md)
 - [InAppProductListing](docs/InAppProductListing.md)
 - [InappproductsListResponse](docs/InappproductsListResponse.md)
 - [Listing](docs/Listing.md)
 - [ListingsListResponse](docs/ListingsListResponse.md)
 - [PageInfo](docs/PageInfo.md)
 - [Price](docs/Price.md)
 - [ProductPurchase](docs/ProductPurchase.md)
 - [Review](docs/Review.md)
 - [ReviewReplyResult](docs/ReviewReplyResult.md)
 - [ReviewsListResponse](docs/ReviewsListResponse.md)
 - [ReviewsReplyRequest](docs/ReviewsReplyRequest.md)
 - [ReviewsReplyResponse](docs/ReviewsReplyResponse.md)
 - [SubscriptionCancelSurveyResult](docs/SubscriptionCancelSurveyResult.md)
 - [SubscriptionDeferralInfo](docs/SubscriptionDeferralInfo.md)
 - [SubscriptionPriceChange](docs/SubscriptionPriceChange.md)
 - [SubscriptionPurchase](docs/SubscriptionPurchase.md)
 - [SubscriptionPurchasesDeferRequest](docs/SubscriptionPurchasesDeferRequest.md)
 - [SubscriptionPurchasesDeferResponse](docs/SubscriptionPurchasesDeferResponse.md)
 - [Testers](docs/Testers.md)
 - [Timestamp](docs/Timestamp.md)
 - [TokenPagination](docs/TokenPagination.md)
 - [Track](docs/Track.md)
 - [TracksListResponse](docs/TracksListResponse.md)
 - [UserComment](docs/UserComment.md)
 - [VoidedPurchase](docs/VoidedPurchase.md)
 - [VoidedPurchasesListResponse](docs/VoidedPurchasesListResponse.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/androidpublisher**: View and manage your Google Play Developer account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/androidpublisher**: View and manage your Google Play Developer account


## Author




