APIs/googleapis.com/androidpublisher/v3/python-client/README.md
# openapi-client
Lets Android application developers access their Google Play accounts. At a high level, the expected workflow is to \"insert\" an Edit, make changes as necessary, and then \"commit\" it. 

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v3
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://androidpublisher.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://androidpublisher.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.ApplicationsApi(api_client)
    package_name = 'package_name_example' # str | Required. Package name of the app.
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    safety_labels_update_request = openapi_client.SafetyLabelsUpdateRequest() # SafetyLabelsUpdateRequest |  (optional)

    try:
        api_response = api_instance.androidpublisher_applications_data_safety(package_name, xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, safety_labels_update_request=safety_labels_update_request)
        print("The response of ApplicationsApi->androidpublisher_applications_data_safety:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling ApplicationsApi->androidpublisher_applications_data_safety: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://androidpublisher.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ApplicationsApi* | [**androidpublisher_applications_data_safety**](docs/ApplicationsApi.md#androidpublisher_applications_data_safety) | **POST** /androidpublisher/v3/applications/{packageName}/dataSafety | 
*ApplicationsApi* | [**androidpublisher_applications_device_tier_configs_create**](docs/ApplicationsApi.md#androidpublisher_applications_device_tier_configs_create) | **POST** /androidpublisher/v3/applications/{packageName}/deviceTierConfigs | 
*ApplicationsApi* | [**androidpublisher_applications_device_tier_configs_get**](docs/ApplicationsApi.md#androidpublisher_applications_device_tier_configs_get) | **GET** /androidpublisher/v3/applications/{packageName}/deviceTierConfigs/{deviceTierConfigId} | 
*ApplicationsApi* | [**androidpublisher_applications_device_tier_configs_list**](docs/ApplicationsApi.md#androidpublisher_applications_device_tier_configs_list) | **GET** /androidpublisher/v3/applications/{packageName}/deviceTierConfigs | 
*ApprecoveryApi* | [**androidpublisher_apprecovery_add_targeting**](docs/ApprecoveryApi.md#androidpublisher_apprecovery_add_targeting) | **POST** /androidpublisher/v3/applications/{packageName}/appRecoveries/{appRecoveryId}:addTargeting | 
*ApprecoveryApi* | [**androidpublisher_apprecovery_cancel**](docs/ApprecoveryApi.md#androidpublisher_apprecovery_cancel) | **POST** /androidpublisher/v3/applications/{packageName}/appRecoveries/{appRecoveryId}:cancel | 
*ApprecoveryApi* | [**androidpublisher_apprecovery_create**](docs/ApprecoveryApi.md#androidpublisher_apprecovery_create) | **POST** /androidpublisher/v3/applications/{packageName}/appRecoveries | 
*ApprecoveryApi* | [**androidpublisher_apprecovery_deploy**](docs/ApprecoveryApi.md#androidpublisher_apprecovery_deploy) | **POST** /androidpublisher/v3/applications/{packageName}/appRecoveries/{appRecoveryId}:deploy | 
*EditsApi* | [**androidpublisher_edits_apks_addexternallyhosted**](docs/EditsApi.md#androidpublisher_edits_apks_addexternallyhosted) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/externallyHosted | 
*EditsApi* | [**androidpublisher_edits_apks_list**](docs/EditsApi.md#androidpublisher_edits_apks_list) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks | 
*EditsApi* | [**androidpublisher_edits_apks_upload**](docs/EditsApi.md#androidpublisher_edits_apks_upload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks | 
*EditsApi* | [**androidpublisher_edits_bundles_list**](docs/EditsApi.md#androidpublisher_edits_bundles_list) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/bundles | 
*EditsApi* | [**androidpublisher_edits_bundles_upload**](docs/EditsApi.md#androidpublisher_edits_bundles_upload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/bundles | 
*EditsApi* | [**androidpublisher_edits_commit**](docs/EditsApi.md#androidpublisher_edits_commit) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}:commit | 
*EditsApi* | [**androidpublisher_edits_countryavailability_get**](docs/EditsApi.md#androidpublisher_edits_countryavailability_get) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/countryAvailability/{track} | 
*EditsApi* | [**androidpublisher_edits_delete**](docs/EditsApi.md#androidpublisher_edits_delete) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId} | 
*EditsApi* | [**androidpublisher_edits_deobfuscationfiles_upload**](docs/EditsApi.md#androidpublisher_edits_deobfuscationfiles_upload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/deobfuscationFiles/{deobfuscationFileType} | 
*EditsApi* | [**androidpublisher_edits_details_get**](docs/EditsApi.md#androidpublisher_edits_details_get) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/details | 
*EditsApi* | [**androidpublisher_edits_details_patch**](docs/EditsApi.md#androidpublisher_edits_details_patch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/details | 
*EditsApi* | [**androidpublisher_edits_details_update**](docs/EditsApi.md#androidpublisher_edits_details_update) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/details | 
*EditsApi* | [**androidpublisher_edits_expansionfiles_get**](docs/EditsApi.md#androidpublisher_edits_expansionfiles_get) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisher_edits_expansionfiles_patch**](docs/EditsApi.md#androidpublisher_edits_expansionfiles_patch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisher_edits_expansionfiles_update**](docs/EditsApi.md#androidpublisher_edits_expansionfiles_update) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisher_edits_expansionfiles_upload**](docs/EditsApi.md#androidpublisher_edits_expansionfiles_upload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*EditsApi* | [**androidpublisher_edits_get**](docs/EditsApi.md#androidpublisher_edits_get) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId} | 
*EditsApi* | [**androidpublisher_edits_images_delete**](docs/EditsApi.md#androidpublisher_edits_images_delete) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language}/{imageType}/{imageId} | 
*EditsApi* | [**androidpublisher_edits_images_deleteall**](docs/EditsApi.md#androidpublisher_edits_images_deleteall) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*EditsApi* | [**androidpublisher_edits_images_list**](docs/EditsApi.md#androidpublisher_edits_images_list) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*EditsApi* | [**androidpublisher_edits_images_upload**](docs/EditsApi.md#androidpublisher_edits_images_upload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*EditsApi* | [**androidpublisher_edits_insert**](docs/EditsApi.md#androidpublisher_edits_insert) | **POST** /androidpublisher/v3/applications/{packageName}/edits | 
*EditsApi* | [**androidpublisher_edits_listings_delete**](docs/EditsApi.md#androidpublisher_edits_listings_delete) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisher_edits_listings_deleteall**](docs/EditsApi.md#androidpublisher_edits_listings_deleteall) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings | 
*EditsApi* | [**androidpublisher_edits_listings_get**](docs/EditsApi.md#androidpublisher_edits_listings_get) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisher_edits_listings_list**](docs/EditsApi.md#androidpublisher_edits_listings_list) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings | 
*EditsApi* | [**androidpublisher_edits_listings_patch**](docs/EditsApi.md#androidpublisher_edits_listings_patch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisher_edits_listings_update**](docs/EditsApi.md#androidpublisher_edits_listings_update) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language} | 
*EditsApi* | [**androidpublisher_edits_testers_get**](docs/EditsApi.md#androidpublisher_edits_testers_get) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/testers/{track} | 
*EditsApi* | [**androidpublisher_edits_testers_patch**](docs/EditsApi.md#androidpublisher_edits_testers_patch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/testers/{track} | 
*EditsApi* | [**androidpublisher_edits_testers_update**](docs/EditsApi.md#androidpublisher_edits_testers_update) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/testers/{track} | 
*EditsApi* | [**androidpublisher_edits_tracks_create**](docs/EditsApi.md#androidpublisher_edits_tracks_create) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks | 
*EditsApi* | [**androidpublisher_edits_tracks_get**](docs/EditsApi.md#androidpublisher_edits_tracks_get) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks/{track} | 
*EditsApi* | [**androidpublisher_edits_tracks_list**](docs/EditsApi.md#androidpublisher_edits_tracks_list) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks | 
*EditsApi* | [**androidpublisher_edits_tracks_patch**](docs/EditsApi.md#androidpublisher_edits_tracks_patch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks/{track} | 
*EditsApi* | [**androidpublisher_edits_tracks_update**](docs/EditsApi.md#androidpublisher_edits_tracks_update) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks/{track} | 
*EditsApi* | [**androidpublisher_edits_validate**](docs/EditsApi.md#androidpublisher_edits_validate) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}:validate | 
*ExternaltransactionsApi* | [**androidpublisher_externaltransactions_createexternaltransaction**](docs/ExternaltransactionsApi.md#androidpublisher_externaltransactions_createexternaltransaction) | **POST** /androidpublisher/v3/{parent}/externalTransactions | 
*ExternaltransactionsApi* | [**androidpublisher_externaltransactions_getexternaltransaction**](docs/ExternaltransactionsApi.md#androidpublisher_externaltransactions_getexternaltransaction) | **GET** /androidpublisher/v3/{name} | 
*ExternaltransactionsApi* | [**androidpublisher_externaltransactions_refundexternaltransaction**](docs/ExternaltransactionsApi.md#androidpublisher_externaltransactions_refundexternaltransaction) | **POST** /androidpublisher/v3/{name}:refund | 
*GeneratedapksApi* | [**androidpublisher_generatedapks_download**](docs/GeneratedapksApi.md#androidpublisher_generatedapks_download) | **GET** /androidpublisher/v3/applications/{packageName}/generatedApks/{versionCode}/downloads/{downloadId}:download | 
*GeneratedapksApi* | [**androidpublisher_generatedapks_list**](docs/GeneratedapksApi.md#androidpublisher_generatedapks_list) | **GET** /androidpublisher/v3/applications/{packageName}/generatedApks/{versionCode} | 
*GrantsApi* | [**androidpublisher_grants_create**](docs/GrantsApi.md#androidpublisher_grants_create) | **POST** /androidpublisher/v3/{parent}/grants | 
*InappproductsApi* | [**androidpublisher_inappproducts_batch_delete**](docs/InappproductsApi.md#androidpublisher_inappproducts_batch_delete) | **POST** /androidpublisher/v3/applications/{packageName}/inappproducts:batchDelete | 
*InappproductsApi* | [**androidpublisher_inappproducts_batch_get**](docs/InappproductsApi.md#androidpublisher_inappproducts_batch_get) | **GET** /androidpublisher/v3/applications/{packageName}/inappproducts:batchGet | 
*InappproductsApi* | [**androidpublisher_inappproducts_batch_update**](docs/InappproductsApi.md#androidpublisher_inappproducts_batch_update) | **POST** /androidpublisher/v3/applications/{packageName}/inappproducts:batchUpdate | 
*InappproductsApi* | [**androidpublisher_inappproducts_delete**](docs/InappproductsApi.md#androidpublisher_inappproducts_delete) | **DELETE** /androidpublisher/v3/applications/{packageName}/inappproducts/{sku} | 
*InappproductsApi* | [**androidpublisher_inappproducts_get**](docs/InappproductsApi.md#androidpublisher_inappproducts_get) | **GET** /androidpublisher/v3/applications/{packageName}/inappproducts/{sku} | 
*InappproductsApi* | [**androidpublisher_inappproducts_insert**](docs/InappproductsApi.md#androidpublisher_inappproducts_insert) | **POST** /androidpublisher/v3/applications/{packageName}/inappproducts | 
*InappproductsApi* | [**androidpublisher_inappproducts_list**](docs/InappproductsApi.md#androidpublisher_inappproducts_list) | **GET** /androidpublisher/v3/applications/{packageName}/inappproducts | 
*InappproductsApi* | [**androidpublisher_inappproducts_patch**](docs/InappproductsApi.md#androidpublisher_inappproducts_patch) | **PATCH** /androidpublisher/v3/applications/{packageName}/inappproducts/{sku} | 
*InappproductsApi* | [**androidpublisher_inappproducts_update**](docs/InappproductsApi.md#androidpublisher_inappproducts_update) | **PUT** /androidpublisher/v3/applications/{packageName}/inappproducts/{sku} | 
*InternalappsharingartifactsApi* | [**androidpublisher_internalappsharingartifacts_uploadapk**](docs/InternalappsharingartifactsApi.md#androidpublisher_internalappsharingartifacts_uploadapk) | **POST** /androidpublisher/v3/applications/internalappsharing/{packageName}/artifacts/apk | 
*InternalappsharingartifactsApi* | [**androidpublisher_internalappsharingartifacts_uploadbundle**](docs/InternalappsharingartifactsApi.md#androidpublisher_internalappsharingartifacts_uploadbundle) | **POST** /androidpublisher/v3/applications/internalappsharing/{packageName}/artifacts/bundle | 
*MonetizationApi* | [**androidpublisher_monetization_convert_region_prices**](docs/MonetizationApi.md#androidpublisher_monetization_convert_region_prices) | **POST** /androidpublisher/v3/applications/{packageName}/pricing:convertRegionPrices | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_archive**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_archive) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}:archive | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_activate**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_activate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}:activate | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_batch_migrate_prices**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_batch_migrate_prices) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans:batchMigratePrices | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_batch_update_states**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_batch_update_states) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans:batchUpdateStates | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_deactivate**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_deactivate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}:deactivate | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_delete**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_delete) | **DELETE** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId} | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_migrate_prices**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_migrate_prices) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}:migratePrices | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_offers_activate**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_offers_activate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId}:activate | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_offers_batch_get**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_offers_batch_get) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers:batchGet | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_offers_batch_update**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_offers_batch_update) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers:batchUpdate | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_offers_batch_update_states**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_offers_batch_update_states) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers:batchUpdateStates | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_offers_create**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_offers_create) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_offers_deactivate**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_offers_deactivate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId}:deactivate | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_offers_delete**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_offers_delete) | **DELETE** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId} | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_offers_get**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_offers_get) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId} | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_offers_list**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_offers_list) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_base_plans_offers_patch**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_base_plans_offers_patch) | **PATCH** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId} | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_batch_get**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_batch_get) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions:batchGet | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_batch_update**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_batch_update) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions:batchUpdate | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_create**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_create) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_delete**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_delete) | **DELETE** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId} | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_get**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_get) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId} | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_list**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_list) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions | 
*MonetizationApi* | [**androidpublisher_monetization_subscriptions_patch**](docs/MonetizationApi.md#androidpublisher_monetization_subscriptions_patch) | **PATCH** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId} | 
*OrdersApi* | [**androidpublisher_orders_refund**](docs/OrdersApi.md#androidpublisher_orders_refund) | **POST** /androidpublisher/v3/applications/{packageName}/orders/{orderId}:refund | 
*PurchasesApi* | [**androidpublisher_purchases_products_acknowledge**](docs/PurchasesApi.md#androidpublisher_purchases_products_acknowledge) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/products/{productId}/tokens/{token}:acknowledge | 
*PurchasesApi* | [**androidpublisher_purchases_products_consume**](docs/PurchasesApi.md#androidpublisher_purchases_products_consume) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/products/{productId}/tokens/{token}:consume | 
*PurchasesApi* | [**androidpublisher_purchases_products_get**](docs/PurchasesApi.md#androidpublisher_purchases_products_get) | **GET** /androidpublisher/v3/applications/{packageName}/purchases/products/{productId}/tokens/{token} | 
*PurchasesApi* | [**androidpublisher_purchases_subscriptions_acknowledge**](docs/PurchasesApi.md#androidpublisher_purchases_subscriptions_acknowledge) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:acknowledge | 
*PurchasesApi* | [**androidpublisher_purchases_subscriptions_cancel**](docs/PurchasesApi.md#androidpublisher_purchases_subscriptions_cancel) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:cancel | 
*PurchasesApi* | [**androidpublisher_purchases_subscriptions_defer**](docs/PurchasesApi.md#androidpublisher_purchases_subscriptions_defer) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:defer | 
*PurchasesApi* | [**androidpublisher_purchases_subscriptions_get**](docs/PurchasesApi.md#androidpublisher_purchases_subscriptions_get) | **GET** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token} | 
*PurchasesApi* | [**androidpublisher_purchases_subscriptions_refund**](docs/PurchasesApi.md#androidpublisher_purchases_subscriptions_refund) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:refund | 
*PurchasesApi* | [**androidpublisher_purchases_subscriptions_revoke**](docs/PurchasesApi.md#androidpublisher_purchases_subscriptions_revoke) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:revoke | 
*PurchasesApi* | [**androidpublisher_purchases_subscriptionsv2_get**](docs/PurchasesApi.md#androidpublisher_purchases_subscriptionsv2_get) | **GET** /androidpublisher/v3/applications/{packageName}/purchases/subscriptionsv2/tokens/{token} | 
*PurchasesApi* | [**androidpublisher_purchases_subscriptionsv2_revoke**](docs/PurchasesApi.md#androidpublisher_purchases_subscriptionsv2_revoke) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptionsv2/tokens/{token}:revoke | 
*PurchasesApi* | [**androidpublisher_purchases_voidedpurchases_list**](docs/PurchasesApi.md#androidpublisher_purchases_voidedpurchases_list) | **GET** /androidpublisher/v3/applications/{packageName}/purchases/voidedpurchases | 
*ReviewsApi* | [**androidpublisher_reviews_get**](docs/ReviewsApi.md#androidpublisher_reviews_get) | **GET** /androidpublisher/v3/applications/{packageName}/reviews/{reviewId} | 
*ReviewsApi* | [**androidpublisher_reviews_list**](docs/ReviewsApi.md#androidpublisher_reviews_list) | **GET** /androidpublisher/v3/applications/{packageName}/reviews | 
*ReviewsApi* | [**androidpublisher_reviews_reply**](docs/ReviewsApi.md#androidpublisher_reviews_reply) | **POST** /androidpublisher/v3/applications/{packageName}/reviews/{reviewId}:reply | 
*SystemapksApi* | [**androidpublisher_systemapks_variants_create**](docs/SystemapksApi.md#androidpublisher_systemapks_variants_create) | **POST** /androidpublisher/v3/applications/{packageName}/systemApks/{versionCode}/variants | 
*SystemapksApi* | [**androidpublisher_systemapks_variants_download**](docs/SystemapksApi.md#androidpublisher_systemapks_variants_download) | **GET** /androidpublisher/v3/applications/{packageName}/systemApks/{versionCode}/variants/{variantId}:download | 
*SystemapksApi* | [**androidpublisher_systemapks_variants_get**](docs/SystemapksApi.md#androidpublisher_systemapks_variants_get) | **GET** /androidpublisher/v3/applications/{packageName}/systemApks/{versionCode}/variants/{variantId} | 
*SystemapksApi* | [**androidpublisher_systemapks_variants_list**](docs/SystemapksApi.md#androidpublisher_systemapks_variants_list) | **GET** /androidpublisher/v3/applications/{packageName}/systemApks/{versionCode}/variants | 
*UsersApi* | [**androidpublisher_users_create**](docs/UsersApi.md#androidpublisher_users_create) | **POST** /androidpublisher/v3/{parent}/users | 
*UsersApi* | [**androidpublisher_users_delete**](docs/UsersApi.md#androidpublisher_users_delete) | **DELETE** /androidpublisher/v3/{name} | 
*UsersApi* | [**androidpublisher_users_list**](docs/UsersApi.md#androidpublisher_users_list) | **GET** /androidpublisher/v3/{parent}/users | 
*UsersApi* | [**androidpublisher_users_patch**](docs/UsersApi.md#androidpublisher_users_patch) | **PATCH** /androidpublisher/v3/{name} | 


## Documentation For Models

 - [Abi](docs/Abi.md)
 - [AbiTargeting](docs/AbiTargeting.md)
 - [AcquisitionTargetingRule](docs/AcquisitionTargetingRule.md)
 - [ActivateBasePlanRequest](docs/ActivateBasePlanRequest.md)
 - [ActivateSubscriptionOfferRequest](docs/ActivateSubscriptionOfferRequest.md)
 - [AddTargetingRequest](docs/AddTargetingRequest.md)
 - [AllUsers](docs/AllUsers.md)
 - [AndroidSdks](docs/AndroidSdks.md)
 - [Apk](docs/Apk.md)
 - [ApkBinary](docs/ApkBinary.md)
 - [ApkDescription](docs/ApkDescription.md)
 - [ApkSet](docs/ApkSet.md)
 - [ApkTargeting](docs/ApkTargeting.md)
 - [ApksAddExternallyHostedRequest](docs/ApksAddExternallyHostedRequest.md)
 - [ApksAddExternallyHostedResponse](docs/ApksAddExternallyHostedResponse.md)
 - [ApksListResponse](docs/ApksListResponse.md)
 - [AppDetails](docs/AppDetails.md)
 - [AppEdit](docs/AppEdit.md)
 - [AppRecoveryAction](docs/AppRecoveryAction.md)
 - [AppVersionList](docs/AppVersionList.md)
 - [AppVersionRange](docs/AppVersionRange.md)
 - [AssetModuleMetadata](docs/AssetModuleMetadata.md)
 - [AssetSliceSet](docs/AssetSliceSet.md)
 - [AutoRenewingBasePlanType](docs/AutoRenewingBasePlanType.md)
 - [AutoRenewingPlan](docs/AutoRenewingPlan.md)
 - [BasePlan](docs/BasePlan.md)
 - [BatchGetSubscriptionOffersRequest](docs/BatchGetSubscriptionOffersRequest.md)
 - [BatchGetSubscriptionOffersResponse](docs/BatchGetSubscriptionOffersResponse.md)
 - [BatchGetSubscriptionsResponse](docs/BatchGetSubscriptionsResponse.md)
 - [BatchMigrateBasePlanPricesRequest](docs/BatchMigrateBasePlanPricesRequest.md)
 - [BatchMigrateBasePlanPricesResponse](docs/BatchMigrateBasePlanPricesResponse.md)
 - [BatchUpdateBasePlanStatesRequest](docs/BatchUpdateBasePlanStatesRequest.md)
 - [BatchUpdateBasePlanStatesResponse](docs/BatchUpdateBasePlanStatesResponse.md)
 - [BatchUpdateSubscriptionOfferStatesRequest](docs/BatchUpdateSubscriptionOfferStatesRequest.md)
 - [BatchUpdateSubscriptionOfferStatesResponse](docs/BatchUpdateSubscriptionOfferStatesResponse.md)
 - [BatchUpdateSubscriptionOffersRequest](docs/BatchUpdateSubscriptionOffersRequest.md)
 - [BatchUpdateSubscriptionOffersResponse](docs/BatchUpdateSubscriptionOffersResponse.md)
 - [BatchUpdateSubscriptionsRequest](docs/BatchUpdateSubscriptionsRequest.md)
 - [BatchUpdateSubscriptionsResponse](docs/BatchUpdateSubscriptionsResponse.md)
 - [Bundle](docs/Bundle.md)
 - [BundlesListResponse](docs/BundlesListResponse.md)
 - [CancelSurveyResult](docs/CancelSurveyResult.md)
 - [CanceledStateContext](docs/CanceledStateContext.md)
 - [Comment](docs/Comment.md)
 - [ConvertRegionPricesRequest](docs/ConvertRegionPricesRequest.md)
 - [ConvertRegionPricesResponse](docs/ConvertRegionPricesResponse.md)
 - [ConvertedOtherRegionsPrice](docs/ConvertedOtherRegionsPrice.md)
 - [ConvertedRegionPrice](docs/ConvertedRegionPrice.md)
 - [CountryTargeting](docs/CountryTargeting.md)
 - [CreateDraftAppRecoveryRequest](docs/CreateDraftAppRecoveryRequest.md)
 - [DeactivateBasePlanRequest](docs/DeactivateBasePlanRequest.md)
 - [DeactivateSubscriptionOfferRequest](docs/DeactivateSubscriptionOfferRequest.md)
 - [DeferredItemReplacement](docs/DeferredItemReplacement.md)
 - [DeobfuscationFile](docs/DeobfuscationFile.md)
 - [DeobfuscationFilesUploadResponse](docs/DeobfuscationFilesUploadResponse.md)
 - [DeveloperComment](docs/DeveloperComment.md)
 - [DeviceFeature](docs/DeviceFeature.md)
 - [DeviceFeatureTargeting](docs/DeviceFeatureTargeting.md)
 - [DeviceGroup](docs/DeviceGroup.md)
 - [DeviceId](docs/DeviceId.md)
 - [DeviceMetadata](docs/DeviceMetadata.md)
 - [DeviceRam](docs/DeviceRam.md)
 - [DeviceSelector](docs/DeviceSelector.md)
 - [DeviceSpec](docs/DeviceSpec.md)
 - [DeviceTier](docs/DeviceTier.md)
 - [DeviceTierConfig](docs/DeviceTierConfig.md)
 - [DeviceTierSet](docs/DeviceTierSet.md)
 - [ExpansionFile](docs/ExpansionFile.md)
 - [ExpansionFilesUploadResponse](docs/ExpansionFilesUploadResponse.md)
 - [ExternalAccountIdentifiers](docs/ExternalAccountIdentifiers.md)
 - [ExternalSubscription](docs/ExternalSubscription.md)
 - [ExternalTransaction](docs/ExternalTransaction.md)
 - [ExternalTransactionAddress](docs/ExternalTransactionAddress.md)
 - [ExternallyHostedApk](docs/ExternallyHostedApk.md)
 - [GeneratedApksListResponse](docs/GeneratedApksListResponse.md)
 - [GeneratedApksPerSigningKey](docs/GeneratedApksPerSigningKey.md)
 - [GeneratedAssetPackSlice](docs/GeneratedAssetPackSlice.md)
 - [GeneratedRecoveryApk](docs/GeneratedRecoveryApk.md)
 - [GeneratedSplitApk](docs/GeneratedSplitApk.md)
 - [GeneratedStandaloneApk](docs/GeneratedStandaloneApk.md)
 - [GeneratedUniversalApk](docs/GeneratedUniversalApk.md)
 - [GetSubscriptionOfferRequest](docs/GetSubscriptionOfferRequest.md)
 - [Grant](docs/Grant.md)
 - [Image](docs/Image.md)
 - [ImagesDeleteAllResponse](docs/ImagesDeleteAllResponse.md)
 - [ImagesListResponse](docs/ImagesListResponse.md)
 - [ImagesUploadResponse](docs/ImagesUploadResponse.md)
 - [InAppProduct](docs/InAppProduct.md)
 - [InAppProductListing](docs/InAppProductListing.md)
 - [InappproductsBatchDeleteRequest](docs/InappproductsBatchDeleteRequest.md)
 - [InappproductsBatchGetResponse](docs/InappproductsBatchGetResponse.md)
 - [InappproductsBatchUpdateRequest](docs/InappproductsBatchUpdateRequest.md)
 - [InappproductsBatchUpdateResponse](docs/InappproductsBatchUpdateResponse.md)
 - [InappproductsDeleteRequest](docs/InappproductsDeleteRequest.md)
 - [InappproductsListResponse](docs/InappproductsListResponse.md)
 - [InappproductsUpdateRequest](docs/InappproductsUpdateRequest.md)
 - [InternalAppSharingArtifact](docs/InternalAppSharingArtifact.md)
 - [IntroductoryPriceInfo](docs/IntroductoryPriceInfo.md)
 - [LanguageTargeting](docs/LanguageTargeting.md)
 - [ListAppRecoveriesResponse](docs/ListAppRecoveriesResponse.md)
 - [ListDeviceTierConfigsResponse](docs/ListDeviceTierConfigsResponse.md)
 - [ListSubscriptionOffersResponse](docs/ListSubscriptionOffersResponse.md)
 - [ListSubscriptionsResponse](docs/ListSubscriptionsResponse.md)
 - [ListUsersResponse](docs/ListUsersResponse.md)
 - [Listing](docs/Listing.md)
 - [ListingsListResponse](docs/ListingsListResponse.md)
 - [LocalizedText](docs/LocalizedText.md)
 - [ManagedProductTaxAndComplianceSettings](docs/ManagedProductTaxAndComplianceSettings.md)
 - [MigrateBasePlanPricesRequest](docs/MigrateBasePlanPricesRequest.md)
 - [ModuleMetadata](docs/ModuleMetadata.md)
 - [ModuleTargeting](docs/ModuleTargeting.md)
 - [Money](docs/Money.md)
 - [MultiAbi](docs/MultiAbi.md)
 - [MultiAbiTargeting](docs/MultiAbiTargeting.md)
 - [OfferDetails](docs/OfferDetails.md)
 - [OfferTag](docs/OfferTag.md)
 - [OneTimeExternalTransaction](docs/OneTimeExternalTransaction.md)
 - [OtherRegionsBasePlanConfig](docs/OtherRegionsBasePlanConfig.md)
 - [OtherRegionsSubscriptionOfferConfig](docs/OtherRegionsSubscriptionOfferConfig.md)
 - [OtherRegionsSubscriptionOfferPhaseConfig](docs/OtherRegionsSubscriptionOfferPhaseConfig.md)
 - [OtherRegionsSubscriptionOfferPhasePrices](docs/OtherRegionsSubscriptionOfferPhasePrices.md)
 - [PageInfo](docs/PageInfo.md)
 - [PartialRefund](docs/PartialRefund.md)
 - [PausedStateContext](docs/PausedStateContext.md)
 - [PrepaidBasePlanType](docs/PrepaidBasePlanType.md)
 - [PrepaidPlan](docs/PrepaidPlan.md)
 - [Price](docs/Price.md)
 - [ProductPurchase](docs/ProductPurchase.md)
 - [ProductPurchasesAcknowledgeRequest](docs/ProductPurchasesAcknowledgeRequest.md)
 - [RecurringExternalTransaction](docs/RecurringExternalTransaction.md)
 - [RefundExternalTransactionRequest](docs/RefundExternalTransactionRequest.md)
 - [RegionalBasePlanConfig](docs/RegionalBasePlanConfig.md)
 - [RegionalPriceMigrationConfig](docs/RegionalPriceMigrationConfig.md)
 - [RegionalSubscriptionOfferConfig](docs/RegionalSubscriptionOfferConfig.md)
 - [RegionalSubscriptionOfferPhaseConfig](docs/RegionalSubscriptionOfferPhaseConfig.md)
 - [RegionalTaxRateInfo](docs/RegionalTaxRateInfo.md)
 - [Regions](docs/Regions.md)
 - [RegionsVersion](docs/RegionsVersion.md)
 - [RemoteInAppUpdate](docs/RemoteInAppUpdate.md)
 - [RemoteInAppUpdateData](docs/RemoteInAppUpdateData.md)
 - [RemoteInAppUpdateDataPerBundle](docs/RemoteInAppUpdateDataPerBundle.md)
 - [Review](docs/Review.md)
 - [ReviewReplyResult](docs/ReviewReplyResult.md)
 - [ReviewsListResponse](docs/ReviewsListResponse.md)
 - [ReviewsReplyRequest](docs/ReviewsReplyRequest.md)
 - [ReviewsReplyResponse](docs/ReviewsReplyResponse.md)
 - [RevocationContext](docs/RevocationContext.md)
 - [RevokeSubscriptionPurchaseRequest](docs/RevokeSubscriptionPurchaseRequest.md)
 - [SafetyLabelsUpdateRequest](docs/SafetyLabelsUpdateRequest.md)
 - [ScreenDensity](docs/ScreenDensity.md)
 - [ScreenDensityTargeting](docs/ScreenDensityTargeting.md)
 - [SdkVersion](docs/SdkVersion.md)
 - [SdkVersionTargeting](docs/SdkVersionTargeting.md)
 - [SplitApkMetadata](docs/SplitApkMetadata.md)
 - [SplitApkVariant](docs/SplitApkVariant.md)
 - [StandaloneApkMetadata](docs/StandaloneApkMetadata.md)
 - [SubscribeWithGoogleInfo](docs/SubscribeWithGoogleInfo.md)
 - [Subscription](docs/Subscription.md)
 - [SubscriptionCancelSurveyResult](docs/SubscriptionCancelSurveyResult.md)
 - [SubscriptionDeferralInfo](docs/SubscriptionDeferralInfo.md)
 - [SubscriptionItemPriceChangeDetails](docs/SubscriptionItemPriceChangeDetails.md)
 - [SubscriptionListing](docs/SubscriptionListing.md)
 - [SubscriptionOffer](docs/SubscriptionOffer.md)
 - [SubscriptionOfferPhase](docs/SubscriptionOfferPhase.md)
 - [SubscriptionOfferTargeting](docs/SubscriptionOfferTargeting.md)
 - [SubscriptionPriceChange](docs/SubscriptionPriceChange.md)
 - [SubscriptionPurchase](docs/SubscriptionPurchase.md)
 - [SubscriptionPurchaseLineItem](docs/SubscriptionPurchaseLineItem.md)
 - [SubscriptionPurchaseV2](docs/SubscriptionPurchaseV2.md)
 - [SubscriptionPurchasesAcknowledgeRequest](docs/SubscriptionPurchasesAcknowledgeRequest.md)
 - [SubscriptionPurchasesDeferRequest](docs/SubscriptionPurchasesDeferRequest.md)
 - [SubscriptionPurchasesDeferResponse](docs/SubscriptionPurchasesDeferResponse.md)
 - [SubscriptionTaxAndComplianceSettings](docs/SubscriptionTaxAndComplianceSettings.md)
 - [SystemApkOptions](docs/SystemApkOptions.md)
 - [SystemApksListResponse](docs/SystemApksListResponse.md)
 - [SystemFeature](docs/SystemFeature.md)
 - [Targeting](docs/Targeting.md)
 - [TargetingInfo](docs/TargetingInfo.md)
 - [TargetingRuleScope](docs/TargetingRuleScope.md)
 - [TargetingUpdate](docs/TargetingUpdate.md)
 - [Testers](docs/Testers.md)
 - [TextureCompressionFormat](docs/TextureCompressionFormat.md)
 - [TextureCompressionFormatTargeting](docs/TextureCompressionFormatTargeting.md)
 - [Timestamp](docs/Timestamp.md)
 - [TokenPagination](docs/TokenPagination.md)
 - [Track](docs/Track.md)
 - [TrackConfig](docs/TrackConfig.md)
 - [TrackCountryAvailability](docs/TrackCountryAvailability.md)
 - [TrackRelease](docs/TrackRelease.md)
 - [TrackTargetedCountry](docs/TrackTargetedCountry.md)
 - [TracksListResponse](docs/TracksListResponse.md)
 - [UpdateBasePlanStateRequest](docs/UpdateBasePlanStateRequest.md)
 - [UpdateSubscriptionOfferRequest](docs/UpdateSubscriptionOfferRequest.md)
 - [UpdateSubscriptionOfferStateRequest](docs/UpdateSubscriptionOfferStateRequest.md)
 - [UpdateSubscriptionRequest](docs/UpdateSubscriptionRequest.md)
 - [UpgradeTargetingRule](docs/UpgradeTargetingRule.md)
 - [User](docs/User.md)
 - [UserComment](docs/UserComment.md)
 - [UserCountriesTargeting](docs/UserCountriesTargeting.md)
 - [UserCountrySet](docs/UserCountrySet.md)
 - [UserInitiatedCancellation](docs/UserInitiatedCancellation.md)
 - [UsesPermission](docs/UsesPermission.md)
 - [Variant](docs/Variant.md)
 - [VariantTargeting](docs/VariantTargeting.md)
 - [VoidedPurchase](docs/VoidedPurchase.md)
 - [VoidedPurchasesListResponse](docs/VoidedPurchasesListResponse.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/androidpublisher**: View and manage your Google Play Developer account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/androidpublisher**: View and manage your Google Play Developer account


## Author




